--- a/bank_page/transaction/templates/transaction/otp.html
+++ b/bank_page/transaction/templates/transaction/otp.html
@@ -30,12 +30,29 @@
         <input type="password" placeholder="Mobile OTP" name='m_otp'>
         <br>
         <br>
-        <label for="cvv">Email OTP</label>
-        <input type="password" placeholder="Email OTP" name='e_otp'>
-        <br>
-        <br>
-        <button type="submit">For OTP Verification</button>
+        <button type="submit">For Face Verification</button>
     </form>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
   </div>
   </body>
+  <script>
+    var time = new Date().getTime();
+     $(document.body).bind("mousemove keypress", function(e) {
+         time = new Date().getTime();
+     });
+
+     function refresh() {
+         if(new Date().getTime() - time >=60000) 
+             window.location.reload(true);
+         else 
+             setTimeout(refresh, 10000);
+     }
+     setTimeout(refresh, 10000);
+    </script>
 </html>
